// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviousNext Business Guide When in a middle article it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="previousTitle"
        id="previousTitleId"
      >
        <h6
          className="previousTitle"
        >
          Previous
        </h6>
      </div>
      <div
        className="nextTitle"
        id="nextTitleDesktopId"
      >
        <h6
          className="nextTitle"
        >
          Next
        </h6>
      </div>
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainer"
        id="previousContainerId"
      >
        <div
          className="previousnext-previous-url"
        >
          <a
            className="button link responsive secondary small spacing"
            onClick={[Function]}
            style={Object {}}
            target="_self"
          >
            <i
              aria-hidden="true"
              className="fa fa-chevron-left"
            />
             
            Pick your business location
          </a>
        </div>
      </div>
      <div
        className="nextContainer"
        id="nextContainerDesktopId"
      >
        <div
          className="previousnext-next-url"
        >
          <a
            className="button link responsive secondary small spacing"
            onClick={[Function]}
            style={Object {}}
            target="_self"
          >
            Choose your business name
             
            <i
              aria-hidden="true"
              className="fa fa-chevron-right"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div
      className="nextTitle"
      id="nextTitleMobileId"
    >
      <h6
        className="nextTitle"
      >
        Next
      </h6>
    </div>
    <div
      className="nextContainer"
      id="nextContainerMobileId"
    >
      <div
        className="previousnext-next-url"
      >
        <a
          className="button link responsive secondary small spacing"
          onClick={[Function]}
          style={Object {}}
          target="_self"
        >
          Choose your business name
           
          <i
            aria-hidden="true"
            className="fa fa-chevron-right"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviousNext Business Guide When in the first article of a middle section it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="previousTitle"
        id="previousTitleId"
      >
        <h6
          className="previousTitle"
        >
          Previous
        </h6>
      </div>
      <div
        className="nextTitle"
        id="nextTitleDesktopId"
      >
        <h6
          className="nextTitle"
        >
          Next
        </h6>
      </div>
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainer"
        id="previousContainerId"
      >
        <div
          className="previousnext-previous-url"
        >
          <a
            className="button link responsive secondary small spacing"
            onClick={[Function]}
            style={Object {}}
            target="_self"
          >
            <i
              aria-hidden="true"
              className="fa fa-chevron-left"
            />
             
            Buy an existing business or franchise
          </a>
        </div>
      </div>
      <div
        className="nextContainer"
        id="nextContainerDesktopId"
      >
        <div
          className="previousnext-next-url"
        >
          <a
            className="button link responsive secondary small spacing"
            onClick={[Function]}
            style={Object {}}
            target="_self"
          >
            Choose a business structure
             
            <i
              aria-hidden="true"
              className="fa fa-chevron-right"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div
      className="nextTitle"
      id="nextTitleMobileId"
    >
      <h6
        className="nextTitle"
      >
        Next
      </h6>
    </div>
    <div
      className="nextContainer"
      id="nextContainerMobileId"
    >
      <div
        className="previousnext-next-url"
      >
        <a
          className="button link responsive secondary small spacing"
          onClick={[Function]}
          style={Object {}}
          target="_self"
        >
          Choose a business structure
           
          <i
            aria-hidden="true"
            className="fa fa-chevron-right"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviousNext Business Guide When in the first article of the first section it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="titleHide"
      >
        <h6
          className="previousTitle"
        >
          No Previous Article
        </h6>
      </div>
      <div
        className="nextTitle"
        id="nextTitleDesktopId"
      >
        <h6
          className="nextTitle"
        >
          Next
        </h6>
      </div>
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainerHide"
      >
        <button
          className="button responsive secondary small spacing"
          disabled={true}
        >
          No previous article
        </button>
      </div>
      <div
        className="nextContainer"
        id="nextContainerDesktopId"
      >
        <div
          className="previousnext-next-url"
        >
          <a
            className="button link responsive secondary small spacing"
            onClick={[Function]}
            style={Object {}}
            target="_self"
          >
            Write your business plan
             
            <i
              aria-hidden="true"
              className="fa fa-chevron-right"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div
      className="nextTitle"
      id="nextTitleMobileId"
    >
      <h6
        className="nextTitle"
      >
        Next
      </h6>
    </div>
    <div
      className="nextContainer"
      id="nextContainerMobileId"
    >
      <div
        className="previousnext-next-url"
      >
        <a
          className="button link responsive secondary small spacing"
          onClick={[Function]}
          style={Object {}}
          target="_self"
        >
          Write your business plan
           
          <i
            aria-hidden="true"
            className="fa fa-chevron-right"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviousNext Business Guide When in the last article of a middle section it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="previousTitle"
        id="previousTitleId"
      >
        <h6
          className="previousTitle"
        >
          Previous
        </h6>
      </div>
      <div
        className="nextTitle"
        id="nextTitleDesktopId"
      >
        <h6
          className="nextTitle"
        >
          Next
        </h6>
      </div>
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainer"
        id="previousContainerId"
      >
        <div
          className="previousnext-previous-url"
        >
          <a
            className="button link responsive secondary small spacing"
            onClick={[Function]}
            style={Object {}}
            target="_self"
          >
            <i
              aria-hidden="true"
              className="fa fa-chevron-left"
            />
             
            Open a business bank account
          </a>
        </div>
      </div>
      <div
        className="nextContainer"
        id="nextContainerDesktopId"
      >
        <div
          className="previousnext-next-url"
        >
          <a
            className="button link responsive secondary small spacing"
            onClick={[Function]}
            style={Object {}}
            target="_self"
          >
            Manage your finances
             
            <i
              aria-hidden="true"
              className="fa fa-chevron-right"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div
      className="nextTitle"
      id="nextTitleMobileId"
    >
      <h6
        className="nextTitle"
      >
        Next
      </h6>
    </div>
    <div
      className="nextContainer"
      id="nextContainerMobileId"
    >
      <div
        className="previousnext-next-url"
      >
        <a
          className="button link responsive secondary small spacing"
          onClick={[Function]}
          style={Object {}}
          target="_self"
        >
          Manage your finances
           
          <i
            aria-hidden="true"
            className="fa fa-chevron-right"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviousNext Business Guide When in the last article of the last section it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="previousTitle"
        id="previousTitleId"
      >
        <h6
          className="previousTitle"
        >
          Previous
        </h6>
      </div>
      <div />
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainer"
        id="previousContainerId"
      >
        <div
          className="previousnext-previous-url"
        >
          <a
            className="button link responsive secondary small spacing"
            onClick={[Function]}
            style={Object {}}
            target="_self"
          >
            <i
              aria-hidden="true"
              className="fa fa-chevron-left"
            />
             
            Native American-owned businesses
          </a>
        </div>
      </div>
      <div />
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div />
    <div />
  </div>
</div>
`;

exports[`PreviousNext For Partners When in a middle article it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="previousTitle"
        id="previousTitleId"
      >
        <h6
          className="previousTitle"
        >
          Previous
        </h6>
      </div>
      <div
        className="nextTitle"
        id="nextTitleDesktopId"
      >
        <h6
          className="nextTitle"
        >
          Next
        </h6>
      </div>
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainer"
        id="previousContainerId"
      >
        <div
          className="previousnext-previous-url"
        >
          <a
            className="button link responsive secondary small spacing"
            onClick={[Function]}
            style={Object {}}
            target="_self"
          >
            <i
              aria-hidden="true"
              className="fa fa-chevron-left"
            />
             
            Operate as a 7(a) Lender
          </a>
        </div>
      </div>
      <div
        className="nextContainer"
        id="nextContainerDesktopId"
      >
        <div
          className="previousnext-next-url"
        >
          <a
            className="button link responsive secondary small spacing"
            onClick={[Function]}
            style={Object {}}
            target="_self"
          >
            Training and Courses
             
            <i
              aria-hidden="true"
              className="fa fa-chevron-right"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div
      className="nextTitle"
      id="nextTitleMobileId"
    >
      <h6
        className="nextTitle"
      >
        Next
      </h6>
    </div>
    <div
      className="nextContainer"
      id="nextContainerMobileId"
    >
      <div
        className="previousnext-next-url"
      >
        <a
          className="button link responsive secondary small spacing"
          onClick={[Function]}
          style={Object {}}
          target="_self"
        >
          Training and Courses
           
          <i
            aria-hidden="true"
            className="fa fa-chevron-right"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviousNext For Partners When in the first article of a section it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="titleHide"
      >
        <h6
          className="previousTitle"
        >
          No Previous Article
        </h6>
      </div>
      <div
        className="nextTitle"
        id="nextTitleDesktopId"
      >
        <h6
          className="nextTitle"
        >
          Next
        </h6>
      </div>
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainerHide"
      >
        <button
          className="button responsive secondary small spacing"
          disabled={true}
        >
          No previous article
        </button>
      </div>
      <div
        className="nextContainer"
        id="nextContainerDesktopId"
      >
        <div
          className="previousnext-next-url"
        >
          <a
            className="button link responsive secondary small spacing"
            onClick={[Function]}
            style={Object {}}
            target="_self"
          >
            Operate as a 7(a) Lender
             
            <i
              aria-hidden="true"
              className="fa fa-chevron-right"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div
      className="nextTitle"
      id="nextTitleMobileId"
    >
      <h6
        className="nextTitle"
      >
        Next
      </h6>
    </div>
    <div
      className="nextContainer"
      id="nextContainerMobileId"
    >
      <div
        className="previousnext-next-url"
      >
        <a
          className="button link responsive secondary small spacing"
          onClick={[Function]}
          style={Object {}}
          target="_self"
        >
          Operate as a 7(a) Lender
           
          <i
            aria-hidden="true"
            className="fa fa-chevron-right"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviousNext For Partners When in the last article of a section it renders properly 1`] = `
<div
  className="previousNextContainer"
  id="previousNextSectionId"
>
  <div
    className="desktop"
    id="desktopDivId"
  >
    <div
      className="prevNextTitleContainer"
      id="prevNextTitleContainerId"
    >
      <div
        className="previousTitle"
        id="previousTitleId"
      >
        <h6
          className="previousTitle"
        >
          Previous
        </h6>
      </div>
      <div />
    </div>
    <div
      className="prevNextButtonsContainer"
      id="prevNextButtonsContainerId"
    >
      <div
        className="previousContainer"
        id="previousContainerId"
      >
        <div
          className="previousnext-previous-url"
        >
          <a
            className="button link responsive secondary small spacing"
            onClick={[Function]}
            style={Object {}}
            target="_self"
          >
            <i
              aria-hidden="true"
              className="fa fa-chevron-left"
            />
             
            Training and Courses
          </a>
        </div>
      </div>
      <div />
    </div>
  </div>
  <div
    className="mobile"
    id="mobileDivId"
  >
    <div />
    <div />
  </div>
</div>
`;

exports[`PreviousNext Won't render without a lineage 1`] = `"received is not a function"`;
